AM_CPPFLAGS = \
	-I@top_srcdir@/src/ \
	-I@top_srcdir@/src/enum/ \
	-I@top_srcdir@/src/networking/ \
	-I@top_srcdir@/src/structure/


noinst_LIBRARIES = libmas.a


libmas_a_SOURCES = \
agent.cpp \
agentdemonstrator.cpp \
agentpolice.cpp \
agentrobber.cpp \
any.cpp \
environment.cpp \
kernel.cpp \
message.cpp



noinst_HEADERS = \
agent.h \
agentdemonstrator.h \
agentpolice.h \
agentposition.h \
agentrobber.h \
any.h \
environment.h \
kernel.h \
message.h \
role.h


