AM_CPPFLAGS = \
	-I@top_srcdir@/src/triangulation/ \
	-I@top_srcdir@/src/


noinst_LIBRARIES = libmodel.a


libmodel_a_SOURCES = model.cpp modelloader.cpp ac3dmodel.cpp ac3dobject.cpp \
	ac3dmaterial.cpp ac3dsurface.cpp


noinst_HEADERS = model.h modelloader.h ac3dmodel.h ac3dobject.h \
		ac3dmaterial.h ac3dsurface.h ac3dmacros.h


