#==============================================================================
# Makefile.am for the libmodel.a
# $Id$
#==============================================================================
AM_CPPFLAGS = \
	-I@top_srcdir@/src/triangulation \
	-I@top_srcdir@/src

noinst_LIBRARIES = libmodel.a

libmodel_a_SOURCES = \
	ac3dmaterial.cpp \
	ac3dmodel.cpp \
	ac3dobject.cpp \
	ac3dsurface.cpp \
	model.cpp \
	modelloader.cpp

noinst_HEADERS = \
	ac3dmacros.h \
	ac3dmaterial.h \
	ac3dmodel.h \
	ac3dobject.h \
	ac3dsurface.h
	model.h \
	modelloader.h

