#==============================================================================
# Makefile.am for the libnet.a
# $Id$
#==============================================================================
AM_CXXFLAGS = -I@top_srcdir@/src/

noinst_LIBRARIES = libnet.a

libnet_a_SOURCES = \
	networking.cpp

noinst_HEADERS = \
	netnode.h \
	networking.h

