#==============================================================================
# Makefile.am for the libpngfuncs.a
# $Id$
#==============================================================================
AM_CPPFLAGS = \
	-I@top_srcdir@/src/pngfuncs \
	-I@top_srcdir@/src

noinst_LIBRARIES = libpngfuncs.a

libpngfuncs_a_SOURCES = \
	pngfuncs.c

noinst_HEADERS = \
	pngfuncs.h

