#==============================================================================
# Makefile.am for the libsim.a
# $Id$
#==============================================================================
AM_CXXFLAGS = \
	-I@top_srcdir@/src \
	-I@top_srcdir@/src/enum \
	-I@top_srcdir@/src/mas \
	-I@top_srcdir@/src/networking \
	-I@top_srcdir@/src/structure

noinst_LIBRARIES = libsim.a

libsim_a_SOURCES = \
	commercialsim.cpp \
	electricitysim.cpp \
	industrialsim.cpp \
	mainsim.cpp \
	residentialsim.cpp \
	simulator.cpp \
	trafficsim.cpp

noinst_HEADERS = \
	commercialsim.h \
	electricitysim.h \
	industrialsim.h \
	mainsim.h \
	residentialsim.h \
	simulator.h \
	trafficsim.h

