AM_CPPFLAGS = \
	-I@top_srcdir@/src/ \
	-I@top_srcdir@/src/mas/ \
	-I@top_srcdir@/src/networking/


noinst_LIBRARIES = libstruct.a


libstruct_a_SOURCES = \
pathstructure.cpp \
rcistructure.cpp \
structure.cpp \
treestructure.cpp \
wegstructure.cpp


noinst_HEADERS = \
pathstructure.h \
rcistructure.h \
structure.h \
treestructure.h \
wegstructure.h
