AM_CPPFLAGS = \
	-I@top_srcdir@/src/tinyxml/


noinst_LIBRARIES = libtinyxpath.a


libtinyxpath_a_SOURCES = \
action_store.cpp \
lex_util.cpp \
node_set.cpp \
tokenlist.cpp \
xml_util.cpp \
xpath_expression.cpp \
xpath_processor.cpp \
xpath_stack.cpp \
xpath_static.cpp \
xpath_stream.cpp \
xpath_syntax.cpp


noinst_HEADERS = \
action_store.h \
byte_stream.h \
lex_token.h \
lex_util.h \
node_set.h \
tinyxpath_conf.h \
tokenlist.h \
xml_util.h \
xpath_expression.h \
xpath_processor.h \
xpath_stack.h \
xpath_static.h \
xpath_stream.h \
xpath_syntax.h
