#==============================================================================
# Makefile.am for libSystem.la
# $Id$
#==============================================================================
AM_CPPFLAGS = -I@top_srcdir@/src/framework/System

noinst_LTLIBRARIES = libSystem.la

libSystem_la_SOURCES = \
CConsole.cpp \
CNullValue.cpp \
CObject.cpp \
CString.cpp \
CType.cpp

noinst_HEADERS = \
CConsole.h \
CNullValue.h \
CObject.h \
CString.h \
CType.h \
SharpPlus.h

