#==============================================================================
# Makefile.am for libInformation.la
# $Id$
#==============================================================================
SUBDIRS = Software

noinst_LTLIBRARIES = libInformation.la

libInformation_la_SOURCES =

libInformation_la_LIBADD = \
	Software/libSoftware.la

