#==============================================================================
# Makefile.am for libReflection.la
# $Id$
#==============================================================================
noinst_LTLIBRARIES = libReflection.la

libReflection_la_SOURCES = CMemberInfo.cpp

noinst_HEADERS = CMemberInfo.h

