#==============================================================================
# Makefile.am for libReflection.la
# $Id$
#==============================================================================
AM_CXXFLAGS = -I@top_srcdir@/src/framework

noinst_LTLIBRARIES = libReflection.la

libReflection_la_SOURCES = CMemberInfo.cpp

noinst_HEADERS = CMemberInfo.h

