#==============================================================================
# Makefile.am for libSoftware.la
# $Id$
#==============================================================================
AM_CPPFLAGS = -I@top_srcdir@/src/framework

noinst_LTLIBRARIES = libSoftware.la

libSoftware_la_SOURCES = CSdl.cpp

noinst_HEADERS = CSdl.h

